# data-tester

./: .coveragerc  .flake8  .gitignore  .mypy.ini  CLAUDE.md  Dockerfile  LICENCE  README.md  data.json  main.py  pyproject.toml  requirements.txt  run_checks.sh  todo.todo
.claude/agent-memory/code-reviewer/: MEMORY.md  project_context.md  project_state.md  user_profile.md
.claude/agents/: code-quality-reviewer.md  code-reviewer.md  doc-writer.md  nicegui-expert.md  technical-documentation-writer.md
.devcontainer/: devcontainer.json
.github/workflows/: merge-pr.yml  python-app.yml
backup/: customers_schema.xlsx
badges/: generate.py
docs/: testautomation_hexagons.excalidraw
htmlcov/: class_index.html  d_0798f3e6841ff43d_dtos_py.html  d_0b7a7f4e09d7ef63_run_testcases_py.html  d_15e2fa14499060a5_backend_factory_interface_py.html  d_15e2fa14499060a5_backend_interface_py.html  d_15e2fa14499060a5_i_backend_factory_py.html  d_15e2fa14499060a5_i_backend_py.html  d_15e2fa14499060a5_i_notifier_py.html  d_15e2fa14499060a5_notifier_interface_py.html  d_19666191de584a35___init___py.html  d_19666191de584a35_simple_config_finder_py.html  d_19666191de584a35_simple_config_manager_py.html  d_1d6ba52a150c76d6_di_py.html  d_264ab90e04d15ce1___init___py.html  d_264ab90e04d15ce1_di_py.html  d_3d348569e72947a4___init___py.html  d_3d348569e72947a4_demo_naming_resolver_py.html  d_3d348569e72947a4_demo_query_handler_py.html  d_3d348569e72947a4_local_backend_factory_py.html  d_3d348569e72947a4_local_backend_py.html  d_44c9b24b2edef38f___init___py.html  d_44c9b24b2edef38f_i_backend_factory_py.html  d_44c9b24b2edef38f_i_backend_py.html  d_44c9b24b2edef38f_i_data_platform_factory_py.html  d_44c9b24b2edef38f_i_data_platform_py.html  d_44c9b24b2edef38f_i_notifier_py.html  d_44c9b24b2edef38f_i_run_testcases_py.html  d_48624392fa893ffd___init___py.html  d_48624392fa893ffd_demo_naming_resolver_py.html  d_48624392fa893ffd_demo_platform_factory_py.html  d_48624392fa893ffd_demo_platform_py.html  d_48624392fa893ffd_demo_query_handler_py.html  d_4b0567e296bb7606___init___py.html  d_4b0567e296bb7606_in_memory_notifier_py.html  d_4b0567e296bb7606_stdout_notifier_py.html  d_5c6937c4f82f2610___init___py.html  d_5c6937c4f82f2610_configs_py.html  d_5c6937c4f82f2610_dto_py.html  d_5c6937c4f82f2610_specifications_py.html  d_5c6937c4f82f2610_testcase_py.html  (+622 more)
specs/: customers_ROWCOUNT.sql  customers_schema.xlsx  products_schema.xlsx
src/: README.md  __init__.py  module.py
src/agent-instruction-examples/: extend-demodata.md  nicegui-testruns.md
src/apps/: README.md  cli_app.py  cli_di.py  http_app.py  http_di.py
src/apps/cli/: app.py  di.py  domain_config_di.py  main_cli.py  report_di.py  specification_di.py  testcase_di.py  testset_di.py
src/apps/http/: app.py  di.py  main_http.py
src/apps/http_routers/: domain_config.py  platform.py  reports.py  specifications.py  testcases.py  testruns.py  testsets.py
src/client_interface/: __init__.py  requests.py
src/common_interfaces/: specification.py  testcase.py  testobject.py
src/config/: README.md  __init__.py  config.py
src/data_platform/: __init__.py  dependency_injection.py  map.py
src/data_platform/demo/: __init__.py  demo_platform.py  demo_platform_factory.py
src/data_platform/dummy/: __init__.py  dummy_platform.py  dummy_platform_factory.py
src/domain/: README.md  __init__.py
src/domain/domain_config/: __init__.py  domain_config.py  domain_config_adapter.py  domain_config_handler.py
src/domain/report/: __init__.py  handle_reports.py  report.py  report_adapter.py
src/domain/specification/: __init__.py  handle_specs.py  spec.md  specification.py  specification_adapter.py
src/domain/testcase/: README.md  __init__.py  handle_testruns.py  testrun.py  testrun_adapter.py
src/domain/testrun/: testrun.py
src/domain/testset/: __init__.py  handle_testsets.py  testset.py  testset_adapter.py
src/domain_adapters/: __init__.py  domain_config_adapter.py  platform_adapter.py  report_adapter.py  specification_adapter.py  testrun_adapter.py  testset_adapter.py
src/domain_config/: __init__.py  dependency_injection.py  domain_config.py  domain_config_manager.py
src/domain_config/adapters/: __init__.py  file_storage.py  readme.txt  yaml_formatter.py  yaml_parser.py  (+2 more)
src/domain_ports/: README.md  __init__.py  domain_config.py  i_domain_config.py  i_platform.py  i_report.py  i_specification.py  i_testrun.py  i_testset.py  report.py  specification.py  testcase.py  testset.py
src/drivers/: README.md  __init__.py  domain_config.py  domain_config_driver.py  platform_driver.py  report.py  report_driver.py  specification.py  specification_driver.py  testcase.py  testrun_driver.py  testset.py  testset_driver.py
src/dtos/: README.md  __init__.py  configs.py  domain_config.py  domain_config_dtos.py  dto.py  find_specs_dto.py  location.py  notification_dtos.py  report.py  report_dtos.py  reports.py  specification.py  specification_dtos.py  specifications.py  storage.py  storage_dtos.py  testcase.py  testcase_dtos.py  testrun_dtos.py  testset.py  testset_dtos.py
src/infrastructure/: README.md  demo_latency.py
src/infrastructure_ports/: README.md  __init__.py  errors.py  i_backend.py  i_backend_factory.py  i_dto_storage.py  i_dto_storage_factory.py  i_notifier.py  i_storage_factory.py  i_user_storage.py  i_user_storage_factory.py
src/notifier/: __init__.py  in_memory_notifier.py  map.py  stdout_notifier.py
src/report/: __init__.py  abstract_report.py  dependency_injection.py  report.py  testcase_report.py  testrun_report.py
src/specification/: dependency_injection.py  specification_spec.md
src/storage/: __init__.py  dict_storage.py  file_storage.py  formatter_factory.py  i_formatter.py  i_formatter_factory.py  i_storage.py  i_storage_factory.py  json_formatter.py  map.py  storage_factory.py
src/testcase/: __init__.py  dependency_injection.py  dtos.py
src/testset/: __init__.py  dependency_injection.py
src/ui/: __init__.py  app.py  common.py  config.py  main_ui.py  styles.py
tests/: conftest.py  coverage.ini  pytest.ini  run_checks.sh
(+596 files in other folders)
